v1.15.0-alpha.1 (1.16.1-forge): 移植 1.16.5 fork 全部源码 + V8 shim 适配 AE2 8.0.0
- 34 个 java 文件从 1.16.5 fork 拷贝过来
- V8PatternDetails.getPossibleInputs() 改用反射调用 ICraftingPatternDetails#getSubstituteInputs(int)：
  AE2 v8.4.0+ 才有此方法，v8.0.0 (1.16.1) 没有。反射兼容两个 AE2 版本。
- build.gradle 改为 ForgeGradle 4.1.+（AE2 官方 1.16.x 系列用的 FG 版本）
- gradle-wrapper 改为 5.6.4（本地缓存；FG4 兼容矩阵内的 Gradle 版本）
- META-INF/mods.toml 改 forge 1.16.1 的依赖区间
- libs/appliedenergistics2-8.0.0.jar 从 GitHub release 下载（4.1 MB）

mixin 类（CraftingGridCacheMixin/CraftingCPUClusterMixin/DualityInterfaceMixin）从 1.16.5 fork 直搬：
AE2 v8.0.0 的 CraftingGridCache.beginCraftingJob/CraftingCPUCluster.submitJob 签名
与 v8.4.7 完全一致（javap 对比已验证），无需重写 mixin 注入点。