@@ -1,19 +1,86 @@
 package com.ae2vm.addon.compiler;
 
-import appeng.api.crafting.IPatternDetails;
-import appeng.api.crafting.IPatternDetails.IInput;
-import appeng.api.stacks.AEKey;
-import appeng.api.stacks.GenericStack;
+import com.ae2vm.shim.api.crafting.IPatternDetails;
+import com.ae2vm.shim.api.crafting.IPatternDetails.IInput;
+import com.ae2vm.shim.api.stacks.AEKey;
+import com.ae2vm.shim.api.stacks.AEItemKey;
+import com.ae2vm.shim.api.stacks.GenericStack;
+import appeng.api.storage.data.IAEItemStack;
 import com.ae2vm.addon.AE2VMAddon;
 import com.ae2vm.addon.vm.CraftingBytecode;
 import com.ae2vm.addon.vm.Opcode;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.concurrent.ConcurrentHashMap;
-import net.minecraft.resources.ResourceLocation;
 
 public class PatternCompiler {
    private static final Map<IPatternDetails, CraftingBytecode> COMPILED_PATTERNS = new ConcurrentHashMap<>();
+
+   // --- AE2 v9 (1.17.1) IAEStack → shim GenericStack 转换（v10+ 直接返回 GenericStack） ---
+
+   /** v9 {@code getPrimaryOutput()} 返回 IAEStack；转 shim GenericStack（null 安全）。 */
+   private static GenericStack primaryOutput(IPatternDetails pattern) {
+      return GenericStack.wrap((IAEItemStack) pattern.getPrimaryOutput());
+   }
+
+   /** v9 {@code getOutputs()} 返回 IAEStack[]；转 shim GenericStack[]（null 安全）。 */
+   private static GenericStack[] outputs(IPatternDetails pattern) {
+      appeng.api.storage.data.IAEStack[] raw = pattern.getOutputs();
+      if (raw == null) return new GenericStack[0];
+      GenericStack[] out = new GenericStack[raw.length];
+      for (int i = 0; i < raw.length; i++) {
+         out[i] = GenericStack.wrap((IAEItemStack) raw[i]);
+      }
+      return out;
+   }
+
+   /** v9 {@code getPossibleInputs()} 返回 IAEStack[]；转 shim GenericStack[]（null 安全）。 */
+   private static GenericStack[] possibleInputs(IInput input) {
+      appeng.api.storage.data.IAEStack[] raw = input.getPossibleInputs();
+      if (raw == null) return new GenericStack[0];
+      GenericStack[] out = new GenericStack[raw.length];
+      for (int i = 0; i < raw.length; i++) {
+         out[i] = GenericStack.wrap((IAEItemStack) raw[i]);
+      }
+      return out;
+   }
+
+   /** v9 {@code getContainerItem(AEKey)}：把 shim key 转 IAEStack 再调 v9 API，包装回来。 */
+   private static AEKey containerItem(IInput input, AEKey template) {
+      if (template == null) return null;
+      appeng.api.storage.data.IAEStack result =
+            input.getContainerItem((template instanceof AEItemKey) ? ((AEItemKey) template).toStack(1) : null);
+      if (result == null) return null;
+      return AEItemKey.wrap((IAEItemStack) result);
+   }
+
+
+   /**
+    * (v1.11.x PATTERN-REFRESH) Monotonic version of the network's pattern set. Bumped
+    * whenever a pattern provider's {@code updatePatterns} runs (a player ADDS / REMOVES /
+    * MODIFIES a pattern in a provider). CraftingVM's JIT {@code bundleCache} persists
+    * across requests on a reused VM; a bundle captured while an intermediate key had NO
+    * pattern records that key as a capture-time {@code missing} leaf. If the player then
+    * adds that pattern, the stale bundle would keep reporting the intermediate as missing
+    * until a restart (the 1.20.1 "新样板作为中间产物识别不到" report). Each VM checks this
+    * version at {@code execute()} and drops its JIT memo when it changed, so the next
+    * request re-captures the affected chains and recognises the new pattern.
+    */
+   private static volatile long patternVersion = 0;
+
+   /** Current pattern-set version (monotonic). */
+   public static long patternVersion() {
+      return patternVersion;
+   }
+
+   /** Mark the network pattern set as changed (call from pattern-update entry points). */
+   public static void bumpPatternVersion() {
+      patternVersion++;
+      // (v1.11.x DIAG) Log when pattern version bumps — if this never fires after a
+      // pattern is added, the mixin is not being applied or the target method is wrong.
+      // LOG disabled (v1.8.20/GTL): keep only total calc time.
+      // AE2VMAddon.LOGGER.info("[AE2-VM] bumpPatternVersion: {} -> {}", patternVersion - 1, patternVersion);
+   }
 
    /**
     * Fuzzy / fluid-substitution groups (v1.9.13): pattern inputs whose
@@ -43,24 +110,59 @@ public class PatternCompiler {
     */
    private static final java.util.Set<AEKey> PROCESSING_INPUT_KEYS = ConcurrentHashMap.newKeySet();
 
+   /**
+    * (v1.10.x PRODUCTIVE_BEES) EXACT processing-recipe input keys. AE2's native
+    * {@code AEProcessingPattern} encodes each input as a single EXACT variant and its
+    * {@code IInput.isValid} is {@code input.matches(template[0])} = exact {@code equals}
+    * (see CraftingCpuHelper.getValidItemTemplates, which filters every
+    * {@code findFuzzyTemplates} NBT variant through {@code isValid} — only the encoded
+    * exact variant passes). So for AE2-native processing patterns a different-NBT variant
+    * of the same item (e.g. Productive Bees honeycombs with different {@code bee_type}
+    * components) must NOT satisfy the slot — using the wrong honeycomb variant would
+    * consume the wrong raw material. Only third-party patterns whose {@code isValid}
+    * genuinely accepts variants (GTL greenhouse, MA essence, UselessMod omniversal) keep
+    * the v1.10.x default-fuzzy behaviour via {@link #PROCESSING_INPUT_KEYS}.
+    * <p>Keys are moved here (from the default-fuzzy set) by
+    * {@link #registerFuzzyGroups(IPatternDetails)} for AE2-native patterns, or registered
+    * directly by callers via {@link #registerExactProcessingInput(AEKey)}.
+    */
+   private static final java.util.Set<AEKey> EXACT_PROCESSING_KEYS = ConcurrentHashMap.newKeySet();
+
    /** True for patterns that are NOT molecular-assembler crafting patterns. */
    private static boolean isProcessingPattern(IPatternDetails pattern) {
       if (pattern == null) {
          return false;
       }
-      // Crafting patterns (AECraftingPattern) run in the ME molecular assembler and
-      // implement IMolecularAssemblerSupportedPattern; everything else (AE processing
-      // patterns, custom machine patterns like GTL's fake-craft) is a processing recipe.
-      return !(pattern instanceof appeng.blockentity.crafting.IMolecularAssemblerSupportedPattern);
+      // AE2 v8 (1.16.5): 没有 v10+ 的 appeng.crafting.pattern.* 分流，v8 用统一的
+      // ICraftingPatternDetails 承载 `isCraftable()` 标志 —— false 即为 processing 模式
+      // （走外部机器配方），true 为分子装配机的 crafting 模式。语义与 v10+ 一致。
+      appeng.api.networking.crafting.ICraftingPatternDetails v8 =
+            com.ae2vm.addon.v8.V8PatternDetails.unwrap(pattern);
+      if (v8 != null) {
+         return !v8.isCraftable();
+      }
+      return true; // 非常规实现：按 processing 处理（保守，走外部机器）
    }
 
-   /** True if {@code key} is an input of a processing recipe (default fuzzy). */
+   /** True if {@code key} is an input of a processing recipe with default fuzzy matching.
+    *  AE2-native exact processing inputs (e.g. bee_type honeycombs) return false. */
    public static boolean isProcessingInput(AEKey key) {
-      return key != null && PROCESSING_INPUT_KEYS.contains(key);
+      return key != null && PROCESSING_INPUT_KEYS.contains(key)
+            && !EXACT_PROCESSING_KEYS.contains(key);
+   }
+
+   /** Mark {@code key} as an EXACT processing input (no NBT-variant substitution). */
+   public static void registerExactProcessingInput(AEKey key) {
+      if (key == null) {
+         return;
+      }
+      PROCESSING_INPUT_KEYS.remove(key);
+      EXACT_PROCESSING_KEYS.add(key);
    }
 
    public static void clearProcessingInputKeys() {
       PROCESSING_INPUT_KEYS.clear();
+      EXACT_PROCESSING_KEYS.clear();
    }
 
    /** Register every input variant group of {@code pattern} (call once per pattern at encode time). */
@@ -69,14 +171,40 @@ public class PatternCompiler {
          return;
       }
       boolean processing = isProcessingPattern(pattern);
-      for (IInput inputEntry : pattern.getInputs()) {
-         GenericStack[] possibleInputs = inputEntry.getPossibleInputs();
+      // (v1.10.x PRODUCTIVE_BEES) AE2's native processing pattern encodes each input as an
+      // EXACT variant (its IInput.isValid is exact equals — see class doc on
+      // EXACT_PROCESSING_KEYS). A different-NBT variant (e.g. a honeycomb with another
+      // bee_type component) must NOT satisfy such a slot — otherwise the VM consumes the
+      // WRONG honeycomb as raw material. Only third-party processing patterns (whose
+      // isValid genuinely accepts variants) keep the default-fuzzy PROCESSING_INPUT set.
+      // (v8) appeng.helpers.CraftingPatternDetails 是 AE2 v8 唯一的原生 ICraftingPatternDetails
+      // 实现，crafting/processing 由 isCraftable() 区分 —— 等价于 v9 的 AEProcessingPattern。
+      appeng.api.networking.crafting.ICraftingPatternDetails v8p =
+            com.ae2vm.addon.v8.V8PatternDetails.unwrap(pattern);
+      boolean nativeAE2Processing = v8p != null
+            && v8p instanceof appeng.helpers.CraftingPatternDetails;
+      IPatternDetails.IInput[] patternInputs = pattern.getInputs();
+      if (patternInputs == null) {
+         return; // (v1.12.x GTL DEFENSIVE) exotic pattern without an input list
+      }
+      for (IInput inputEntry : patternInputs) {
+         GenericStack[] possibleInputs = possibleInputs(inputEntry);
+         if (possibleInputs == null) {
+            continue;
+         }
          if (processing) {
             // Processing recipes default to fuzzy matching: remember the input's primary
             // key so the VM matches it against the item's full fuzzy family at runtime.
             if (possibleInputs != null && possibleInputs.length > 0
                   && possibleInputs[0] != null && possibleInputs[0].what() != null) {
-               PROCESSING_INPUT_KEYS.add(possibleInputs[0].what());
+               if (nativeAE2Processing) {
+                  // Exact: move to the EXACT set so isProcessingInput() returns false.
+                  EXACT_PROCESSING_KEYS.add(possibleInputs[0].what());
+               } else {
+                  // Third-party default-fuzzy: remember the primary key so the VM matches
+                  // it against the item's full fuzzy family at runtime.
+                  PROCESSING_INPUT_KEYS.add(possibleInputs[0].what());
+               }
             }
          }
          if (possibleInputs == null || possibleInputs.length <= 1) {
@@ -102,40 +230,112 @@ public class PatternCompiler {
    /** The full set of acceptable variants for {@code key} (always contains {@code key} itself). */
    public static java.util.Set<AEKey> getFuzzyGroup(AEKey key) {
       java.util.Set<AEKey> group = FUZZY_GROUPS.get(key);
-      return group != null ? group : java.util.Set.of(key);
+      return group != null ? group : java.util.Collections.singleton(key);
    }
 
    public static void clearFuzzyGroups() {
       FUZZY_GROUPS.clear();
       PROCESSING_INPUT_KEYS.clear();
+      EXACT_PROCESSING_KEYS.clear();
+   }
+
+   /**
+    * True for UselessMod's virtual smart-doubling wrapper {@code ScaledProcessingPattern}
+    * (and the benchmark stand-in {@code ScaledBenchPatternDetails}): a runtime wrapper
+    * whose class name carries {@code Scaled…Pattern}. Such wrappers are NOT part of the
+    * pattern-provider lists the {@code updatePatterns} pass compiles, so every compiler
+    * entry point unwraps them to the ORIGINAL pattern before compiling (v1.10.8).
+    */
+   private static boolean isScaledPattern(IPatternDetails pattern) {
+      if (pattern == null) {
+         return false;
+      }
+      String cn = pattern.getClass().getName();
+      return cn.contains("Scaled") && cn.contains("Pattern");
+   }
+
+   /**
+    * Recursively unwraps a virtual smart-doubling wrapper down to its ORIGINAL pattern via
+    * its {@code getOriginal()} accessor (reflective — the wrapper is an optional third-party
+    * class). Returns {@code pattern} unchanged when it is not a scaled wrapper or
+    * unwrapping fails. Compiling the ORIGINAL (never the virtual wrapper) keeps
+    * {@code outputPerCraft} at the real per-craft amount and makes every plan's
+    * {@code patternTimes} key a real AE2 pattern that the Crafting CPU / {@code getProviders}
+    * / furnace {@code pushPattern} recognise — UselessMod re-applies smart-doubling at
+    * submit time because the key is NOT a {@code ScaledProcessingPattern}.
+    */
+   private static IPatternDetails unwrapScaled(IPatternDetails pattern) {
+      if (pattern == null) {
+         return null;
+      }
+      IPatternDetails current = pattern;
+      while (isScaledPattern(current)) {
+         try {
+            java.lang.reflect.Method method = current.getClass().getMethod("getOriginal");
+            Object original = method.invoke(current);
+            if (!(original instanceof IPatternDetails) || original == null) {
+               break;
+            }
+            current = (IPatternDetails) original;
+         } catch (Exception e) {
+            break; // not a wrapper we can unwrap — keep current
+         }
+      }
+      return current;
    }
 
    public static void compileIfAbsent(IPatternDetails pattern) {
-      if (pattern != null) {
-         COMPILED_PATTERNS.computeIfAbsent(pattern, PatternCompiler::compilePattern);
+      IPatternDetails effective = unwrapScaled(pattern);
+      // (v1.12.x GTL DEFENSIVE) Patterns with NO usable output (empty getOutputs() or
+      // null primary output — possible with buggy/partial recipes in modpacks) cannot be
+      // crafted: skip them instead of letting compilePattern NPE and dragging the whole
+      // request into a native fallback (stall).
+      if (effective != null && hasUsableOutput(effective) && effective.getInputs() != null) {
+         COMPILED_PATTERNS.computeIfAbsent(effective, PatternCompiler::compilePattern);
+      }
+   }
+
+   /** True if the pattern exposes at least one output with a non-null key. */
+   private static boolean hasUsableOutput(IPatternDetails pattern) {
+      try {
+         GenericStack[] outputs = outputs(pattern);
+         if (outputs == null || outputs.length == 0) {
+            return false;
+         }
+         GenericStack primary = primaryOutput(pattern);
+         return primary != null && primary.what() != null;
+      } catch (RuntimeException e) {
+         return false; // defensive: an exotic pattern that throws on inspection is unusable
       }
    }
 
    public static CraftingBytecode getCompiled(IPatternDetails pattern) {
-      return COMPILED_PATTERNS.get(pattern);
+      return COMPILED_PATTERNS.get(unwrapScaled(pattern));
    }
 
    public static CraftingBytecode compileRequest(IPatternDetails pattern, long requestedAmount) {
-      CraftingBytecode patternBytecode = COMPILED_PATTERNS.get(pattern);
+      IPatternDetails effective = unwrapScaled(pattern);
+      CraftingBytecode patternBytecode = COMPILED_PATTERNS.get(effective);
       if (patternBytecode == null) {
-         compileIfAbsent(pattern);
-         patternBytecode = COMPILED_PATTERNS.get(pattern);
+         compileIfAbsent(effective);
+         patternBytecode = COMPILED_PATTERNS.get(effective);
          if (patternBytecode == null) {
             throw new IllegalStateException("Failed to compile pattern: " + pattern);
          }
       }
 
       long outputPerCraft = patternBytecode.getOutputAmountPerCraft();
-      long craftTimes = (requestedAmount + outputPerCraft - 1L) / outputPerCraft;
+      // (v1.12.x GTL BIG-ORDER FIX) Saturating ceil-div — (a + b - 1) overflows to a
+      // negative craft count for requestedAmount near Long.MAX_VALUE (10^18+ orders):
+      // e.g. MAX + 2 - 1 wraps to Long.MIN_VALUE, / 2 → negative → the plan silently
+      // crafts nothing ("大数量订单假阴/卡死"). a/b + (a%b!=0) never overflows.
+      long craftTimes = ceilDiv(requestedAmount, outputPerCraft);
       CraftingBytecode.Builder builder = new CraftingBytecode.Builder();
       int outputIdx = builder.addConstant(patternBytecode.getOutput());
       builder.setOutput(outputIdx, requestedAmount);
-      int patternIdx = builder.addPattern(pattern);
+      // (v1.10.8) Use the UNWRAPPED (original) pattern as the plan's pattern key — never the
+      // virtual scaled wrapper — so AE2's CPU / getProviders / furnace pushPattern all match.
+      int patternIdx = builder.addPattern(effective);
       builder.emitPushLong(craftTimes);
       builder.emit(Opcode.CALL);
       builder.emitShort(patternIdx);
@@ -143,6 +343,11 @@ public class PatternCompiler {
    }
 
    private static CraftingBytecode compilePattern(IPatternDetails pattern) {
+      // (v1.12.x GTL DEFENSIVE) Never compile a pattern without a usable primary output
+      // (compileIfAbsent already filters; this guards direct computeIfAbsent callers).
+      if (!hasUsableOutput(pattern)) {
+         return null;
+      }
       // (v1.9.13) 编码阶段：检测样板是否开启模糊匹配/流体替换（getPossibleInputs()
       // 返回多个变体，如灰色羊毛样板可接受白色羊毛）。把该样板的所有输入变体注册为
       // 模糊组——A、B 可替换时，A→C、B→C 都视为可接受输入路径，供 VM 的库存缺失
@@ -150,15 +355,13 @@ public class PatternCompiler {
       // 样板来源（分子装配室/样板终端/ME 接口）编译时都生效。
       registerFuzzyGroups(pattern);
       CraftingBytecode.Builder builder = new CraftingBytecode.Builder();
-      GenericStack primaryOutput = pattern.getPrimaryOutput();
+      GenericStack primaryOutput = primaryOutput(pattern);
       AEKey outputKey = primaryOutput.what();
       long outputPerCraft = primaryOutput.amount();
       int outputIdx = builder.addConstant(outputKey);
       int patternIdx = builder.addPattern(pattern);
       builder.setOutput(outputIdx, outputPerCraft);
-      // Compile logging disabled — the startup pass compiles the whole network's patterns
-      // and floods the log with thousands of lines. Per-request PLAN/USED/CRAFT/MISS and
-      // AGG diagnostics in CraftingVM cover the verification needs. (v1.8.17)
+      // Compile logging disabled (v1.9.1) — keep only total calc time.
       // AE2VMAddon.LOGGER
       //    .info(
       //       "[AE2-VM] Compiling pattern: {} x {} ({} inputs, {} outputs)",
@@ -167,13 +370,21 @@ public class PatternCompiler {
       builder.emit(Opcode.DUP);
       builder.emitRecordPattern(patternIdx);
 
-      for (IInput inputEntry : pattern.getInputs()) {
-         GenericStack[] possibleInputs = inputEntry.getPossibleInputs();
-         if (possibleInputs.length != 0) {
+      // (v1.12.x GTL DEFENSIVE) Null inputs = not compilable (compileIfAbsent already
+      // filters; this guards direct computeIfAbsent callers from the same pattern).
+      if (pattern.getInputs() == null) {
+         return null;
+      }
+      IPatternDetails.IInput[] patternInputs = pattern.getInputs();
+      for (IInput inputEntry : patternInputs) {
+         GenericStack[] possibleInputs = possibleInputs(inputEntry);
+         if (possibleInputs == null || possibleInputs.length == 0) {
+            continue;
+         }
             GenericStack inputStack = possibleInputs[0];
             AEKey inputKey = inputStack.what();
             long multiplier = inputEntry.getMultiplier();
-            // Fix (AE2 1.21.1 faithful): per-craft consumption is multiplier × amount,
+            // Fix (AE2 1.20.1 faithful): per-craft consumption is multiplier × amount,
             // not just multiplier. Fixes fluid/bucket per-craft amounts (1 bucket of
             // water = 1000 mB, not 1 mB) and any other input with amount > 1.
             long totalPerCraft = multiplier * Math.max(1, inputStack.amount());
@@ -185,7 +396,9 @@ public class PatternCompiler {
             // This is the GTL greenhouse fake-craft / crafting-template case where a block
             // (or template) must be present but is never consumed. Emit a one-time
             // CATALYST_SEED demand instead of the per-craft CALL_BY_KEY/EXTRACT chain.
-            AEKey remainingKey = inputEntry.getRemainingKey(inputKey);
+            // AE2 v9 (1.17.1): IInput.getContainerItem(IAEStack) — 与 v10 同名同语义，
+            // 走 containerItem() helper 做 shim key ↔ IAEStack 转换
+            AEKey remainingKey = containerItem(inputEntry, inputKey);
             if (remainingKey != null && remainingKey.equals(inputKey)) {
                // (v1.10.x DURABILITY) A finite-use (durability) tool is a returned input that
                // degrades: one amount-sized unit survives `uses` firings, so a batch of
@@ -193,7 +406,8 @@ public class PatternCompiler {
                // form) — NOT one seed (catalyst) and NOT amount × times (consumed). Distinguish
                // via the IFiniteUseInput capability (durabilityUses() == MAX_VALUE → catalyst).
                long uses = Long.MAX_VALUE;
-               if (inputEntry instanceof IFiniteUseInput f) {
+               if (inputEntry instanceof IFiniteUseInput) {
+                   IFiniteUseInput f = (IFiniteUseInput) inputEntry;
                   uses = f.durabilityUses();
                }
                int seedIdx = builder.addConstant(inputKey);
@@ -208,7 +422,6 @@ public class PatternCompiler {
                builder.emitShort(seedIdx);
                continue;
             }
-            // Input compile logging disabled (v1.8.17) — see compile-pattern comment above.
             // AE2VMAddon.LOGGER
             //    .info(
             //       "[AE2-VM]   Input: key={}, stackAmt={}, multiplier={}, totalPerCraft={}", new Object[]{inputKey, inputStack.amount(), multiplier, totalPerCraft}
@@ -248,10 +461,10 @@ public class PatternCompiler {
                builder.emitExtractIngredient(pIdx);
             }
             builder.emit(Opcode.POP);
-         }
       }
 
-      for (GenericStack output : pattern.getOutputs()) {
+      for (GenericStack output : outputs(pattern)) {
+         if (output == null) continue;
          int outIdx = builder.addConstant(output.what());
          builder.emit(Opcode.DUP);
          builder.emitPushLong(output.amount());
@@ -265,7 +478,7 @@ public class PatternCompiler {
    }
 
    public static void invalidate(IPatternDetails pattern) {
-      COMPILED_PATTERNS.remove(pattern);
+      COMPILED_PATTERNS.remove(unwrapScaled(pattern));
    }
 
    public static void clearCache() {
@@ -277,29 +490,40 @@ public class PatternCompiler {
    }
 
    public static IPatternDetails findCompiledByOutput(AEKey outputKey) {
-      if (outputKey != null && outputKey.getId() != null) {
-         String targetId = outputKey.getId().toString();
+      // AE2 1.18.1 (forge/v10.x): AEKey.getId() 不存在
+      // 1.19+ 走 outputKey.getId().toString() 拿 ResourceLocation.toString() 做 NBT-忽略 模式查找
+      // 1.18.1 用 AEItemKey.getItem() 同 Item 引用（== 比较）实现 — AE2 原生 ItemStack 同一 item 实例复用同一 Item 实例
+      //   fallback 到 .equals() 比较处理非 Item 类型（AE2 1.18.1 无 AEFluidKey，AE2 v10.fluidKey 走 KeyType 路径）
+      if (outputKey != null) {
+         net.minecraft.item.Item outputItem = (outputKey instanceof com.ae2vm.shim.api.stacks.AEItemKey)
+                 ? ((com.ae2vm.shim.api.stacks.AEItemKey) outputKey).getItem() : null;
 
          for (Entry<IPatternDetails, CraftingBytecode> entry : COMPILED_PATTERNS.entrySet()) {
-            GenericStack patternOutput = entry.getKey().getPrimaryOutput();
+            GenericStack patternOutput = primaryOutput(entry.getKey());
             if (patternOutput != null && patternOutput.what() != null) {
-               ResourceLocation patternId = patternOutput.what().getId();
-               if (patternId != null && targetId.equals(patternId.toString())) {
+               if (outputItem != null && patternOutput.what() instanceof com.ae2vm.shim.api.stacks.AEItemKey
+                       && ((com.ae2vm.shim.api.stacks.AEItemKey) patternOutput.what()).getItem() == outputItem) {
+                  return entry.getKey();
+               }
+               if (outputKey.equals(patternOutput.what())) {
                   return entry.getKey();
                }
             }
 
-            for (GenericStack out : entry.getKey().getOutputs()) {
-               if (out != null && out.what() != null && out.what().getId() != null && targetId.equals(out.what().getId().toString())) {
-                  return entry.getKey();
+            for (GenericStack out : outputs(entry.getKey())) {
+               if (out != null && out.what() != null) {
+                  if (outputItem != null && out.what() instanceof com.ae2vm.shim.api.stacks.AEItemKey
+                          && ((com.ae2vm.shim.api.stacks.AEItemKey) out.what()).getItem() == outputItem) {
+                     return entry.getKey();
+                  }
+                  if (outputKey.equals(out.what())) {
+                     return entry.getKey();
+                  }
                }
             }
          }
-
-         return null;
-      } else {
-         return null;
       }
+      return null;
    }
 
    // --- Network-key overloads (1.0.0 logic uses a single global cache, so the network key is ignored). ---
@@ -317,5 +541,18 @@ public class PatternCompiler {
 
    public static IPatternDetails findCompiledByOutput(Object network, AEKey outputKey) {
       return findCompiledByOutput(outputKey);
+   }
+
+   /**
+    * (v1.12.x GTL BIG-ORDER FIX) Saturated ceil-division. The naive
+    * {@code (a + b - 1) / b} overflows when {@code a} is near {@link Long#MAX_VALUE}
+    * (10^18+ orders), producing a NEGATIVE craft count — the VM then silently crafts
+    * nothing and the plan reports false missing (or the job stalls). The remainder form
+    * never overflows and equals ceil(a/b) for positive longs.
+    */
+   public static long ceilDiv(long a, long b) {
+      if (a <= 0L) return 0L;
+      if (b <= 0L) return 0L;
+      return a / b + (a % b == 0L ? 0L : 1L);
    }
 }
